compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__constructors_get_their_own_jsdoc.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\npub type Wibble {\n  /// Wibbling!!\n  Wibble(field: Int)\n\n  /// Wobbling!!\n  Wobble(field: Int)\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  /// Wibbling!!
  Wibble(field: Int)

  /// Wobbling!!
  Wobble(field: Int)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

/**
 * Wibbling!!
 */
export class Wibble extends $CustomType {
  constructor(field) {
    super();
    this.field = field;
  }
}
export const Wibble$Wibble = (field) => new Wibble(field);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$field = (value) => value.field;
export const Wibble$Wibble$0 = (value) => value.field;

/**
 * Wobbling!!
 */
export class Wobble extends $CustomType {
  constructor(field) {
    super();
    this.field = field;
  }
}
export const Wibble$Wobble = (field) => new Wobble(field);
export const Wibble$isWobble = (value) => value instanceof Wobble;
export const Wibble$Wobble$field = (value) => value.field;
export const Wibble$Wobble$0 = (value) => value.field;

export const Wibble$field = (value) => value.field;
