compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__keyword_label_name.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "pub type Thing {\n  Thing(in: Int, class: Nil)\n}\n"
---
----- SOURCE CODE
pub type Thing {
  Thing(in: Int, class: Nil)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Thing extends $CustomType {
  constructor(in$, class$) {
    super();
    this.in = in$;
    this.class = class$;
  }
  
  withFields(fields) {
    return new this.constructor(
      'in' in fields ? fields.in : this.in,
      'class' in fields ? fields.class : this.class,
    );
  }
}
